// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageSelector getLanguageChangeAction should return an action to go to a single event if there is an event is selected 1`] = `
Object {
  "payload": Object {
    "city": "augsburg",
    "eventId": "1",
    "language": "de",
  },
  "type": "EVENTS",
}
`;

exports[`LanguageSelector getLanguageChangeAction should return an action to go to categories 1`] = `
Object {
  "payload": Object {
    "categoryPath": undefined,
    "city": "augsburg",
    "language": "de",
  },
  "type": "CATEGORIES",
}
`;

exports[`LanguageSelector getLanguageChangeAction should return an action to go to categories redirect if a category is selected 1`] = `
Object {
  "payload": Object {
    "categoryId": 4361,
    "city": "augsburg",
    "language": "de",
  },
  "type": "CATEGORIES_REDIRECT",
}
`;

exports[`LanguageSelector getLanguageChangeAction should return an action to go to disclaimer 1`] = `
Object {
  "payload": Object {
    "city": "augsburg",
    "language": "de",
  },
  "type": "DISCLAIMER",
}
`;

exports[`LanguageSelector getLanguageChangeAction should return an action to go to events 1`] = `
Object {
  "payload": Object {
    "city": "augsburg",
    "eventId": undefined,
    "language": "de",
  },
  "type": "EVENTS",
}
`;

exports[`LanguageSelector getLanguageChangeAction should return an action to go to extras 1`] = `
Object {
  "payload": Object {
    "city": "augsburg",
    "extraAlias": "sprungbrett",
    "language": "de",
  },
  "type": "EXTRAS",
}
`;

exports[`LanguageSelector getLanguageChangeAction should return an action to go to search 1`] = `
Object {
  "payload": Object {
    "city": "augsburg",
    "language": "de",
  },
  "type": "SEARCH",
}
`;

exports[`LanguageSelector should render a LanguageSelectorDropDownItem if it is a header action item 1`] = `
<Translate(LanguageSelectorDropDownItem)
  activeItemCode="de"
  selectorItems={
    Array [
      SelectorItemModel {
        "_code": "de",
        "_href": Object {
          "payload": Object {
            "city": "augsburg",
            "language": "de",
          },
          "type": "DISCLAIMER",
        },
        "_name": "Deutsch",
      },
      SelectorItemModel {
        "_code": "en",
        "_href": Object {
          "payload": Object {
            "city": "augsburg",
            "language": "en",
          },
          "type": "DISCLAIMER",
        },
        "_name": "English",
      },
      SelectorItemModel {
        "_code": "ar",
        "_href": Object {
          "payload": Object {
            "city": "augsburg",
            "language": "ar",
          },
          "type": "DISCLAIMER",
        },
        "_name": "Arabic",
      },
    ]
  }
/>
`;

exports[`LanguageSelector should render a normal Selector if it is not a header action item 1`] = `
<Selector
  activeItemCode="de"
  items={
    Array [
      SelectorItemModel {
        "_code": "de",
        "_href": Object {
          "payload": Object {
            "city": "augsburg",
            "language": "de",
          },
          "type": "DISCLAIMER",
        },
        "_name": "Deutsch",
      },
      SelectorItemModel {
        "_code": "en",
        "_href": Object {
          "payload": Object {
            "city": "augsburg",
            "language": "en",
          },
          "type": "DISCLAIMER",
        },
        "_name": "English",
      },
      SelectorItemModel {
        "_code": "ar",
        "_href": Object {
          "payload": Object {
            "city": "augsburg",
            "language": "ar",
          },
          "type": "DISCLAIMER",
        },
        "_name": "Arabic",
      },
    ]
  }
  verticalLayout={true}
/>
`;
